Completed the Third Nocturn for Matins of the Dead, and included the Seventh Lesson.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -5,7 +5,7 @@
 %% TODO: correct date
 \chapter*{Matins of the Dead}
 
- \textit{On All Souls' Day, all three Nocturns are said. On oher days, only one Nocturn is said according to the following order: first Nocturn on Sundays, Mondays, and Thursdays; second Nocturn on Tuesdays and Fridays; third Nocturn on Wednesdays and Saturdays. On the day of burial, the first Nocturn is always said.}
+ \textit{On All Souls' Day, all three Nocturns are said. On other days, only one Nocturn is said according to the following order: first Nocturn on Sundays, Mondays, and Thursdays; second Nocturn on Tuesdays and Fridays; third Nocturn on Wednesdays and Saturdays. On the day of burial, the first Nocturn is always said.}
 
 %% TODO: correct the little chapter
  \section*{The Invitatory}
@@ -346,7 +346,7 @@
 }
 \end{latinenglishsection}
 
-{\color{red}\textit{If the First Nocturn only is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
+{\color{red}\textit{If only the First Nocturn is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
  
 \vfill\pagebreak
 
@@ -649,10 +649,381 @@
 	{\color{red}\Vbar.} From the depths I have cried to Thee, O Lord; Lord, hear my voice. * Nor may the sight of man behold me.
 }
 \end{latinenglishsection}
+\vfill\pagebreak
+
+\subsection*{Fifth Lesson - Job 14:1-6}
+
+ \begin{latinenglishsection}
+\latinenglish{
+	Homo natus de mul\'{i}ere, brevi vivens t\'{e}mpore, repl\'{e}tur multis mis\'{e}riis. Qui quasi flos egr\'{e}dietur et cont\'{e}ritur, etfugit velut umbra, et numquam in e\'{o}dem statu p\'{e}rmanet. Et dignum ducis super hujusc\'{e}modi aper\'{i}re \'{o}culos tuos, et add\'{u}cere eum tecu in jud\'{i}cium? Quis potest f\'{a}cere mundum de imm\'{u}ndo conc\'{e}ptum s\'{e}mine? Nonne tu quis solus es? Breves dies h\'{o}minis sunt, numerus m\'{e}nsium ejus apud te est: Constitu\'{i}sti t\'{e}rminos ejus, qui pr\ae ter\'{i}ri non p\'{o}terunt. Rec\'{e}de p\'{a}ululum ab eo, ut qui\'{e}scat, donec opt\'{a}ta v\'{e}niat, sicut mercen\'{a}rii, dies ejus.
+	
+	{\color{red}\Rbar.} Heu mihi, D\'{o}mine, quia pecc\'{a}vi nimis in vita mea: Quid f\'{a}ciam, miser? ubi f\'{u}giam, nisi ad te, Deus meus? * Miser\'{e}re mei, dum v\'{e}neris in nov\'{i}ssimo die.
+	
+	{\color{red}\Vbar.} Anima mea turb\'{a}ta est valde, sed tu, D\'{o}mine, succ\'{u}rre ei. * Miser\'{e}re mei, dum v\'{e}neris in nov\'{i}ssimo die.
+}{
+	Man born of woman, living for a short time, is filled with many miseries. He cometh forth like a flower, and is destroyed, and fleeth as a shadow, and never continueth in the same state. And dost Thou think it meet to open Thy eyes upon such a one, and to bring him into judgement with Thee? Who can make him clean that is conceived of unclean seed? Is it not Thou only? The days of man are short, and the number of his months is with Thee: Thou hast appointed his bounds, which cannot be passed. Depart a little from him, that he may rest, until his wished-for day come, as that of the hireling.
+	
+	{\color{red}\Rbar.} Woe is me, O Lord, because I have sinned exceedingly in my life; O wretch, what shall I do, whither shall I fly unless to Thee, my God? * Have mercy on me, when Thou comest at the latter day.
+	
+	{\color{red}\Vbar.} My soul is greatly troubled; but Thou, O Lord, succor it. * Have mercy on me, when Thou comest at the latter day.
+}
+\end{latinenglishsection}
+
+\subsection*{Sixth Lesson - Job 14:13-16}
+
+ \begin{latinenglishsection}
+\latinenglish{
+	Quis mihi hoc tr\'{i}buat, ut in inf\'{e}rno pr\'{o}tegas me et absc\'{o}ndas me, donec pertr\'{a}nseat furor tuus, et const\'{i}tuas mihi tempus in quo record\'{e}ris mei? Purt\'{a}sne m\'{o}rtuus homo rursum vivat? Cunctis di\'{e}bus quibus nunc m\'{i}lito, exp\'{e}cto donec v'{e}niat immut\'{a}tio mea. Voc\'{a}bus me, et ego respond\'{e}bo tibi; \'{o}peri m\'{a}nuum tu\'{a}rum p\'{o}rriges d\'{e}xteram. Tu quidem gressus meos dinumer\'{a}sti, sed parce pecc\'{a}tis meis.
+	
+	{\color{red}\Rbar.} Ne record\'{e}ris pecc\'{a}ta mea, D\'{o}mine: * Dum v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+	
+	{\color{red}\Vbar.} D\'{i}rige, D\'{o}mine Deus meus, in consp\'{e}ctu tuo viam meam. * Dum v\'{e}neris judicare s\'{\ae}culum per ignem.
+	
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine: et lux perp\'{e}tua l\'{u}ceat eis. * Dum v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+}{
+	Who will grant me this, that Thou mayest protect me in hell, and hide me till Thy wrath pass, and appoint me a time when Thou wilt remember me? Shall man that is dead, thinkest Thou, live again? All the days in which I am now in warfare, I expect until my change come. Thou wilt call me, and I will anwer Thee: to the work of Thy hands Thou wilt reach out Thy right hand. Thou indeed hast numbered my steps, but spare my sins.
+	
+	{\color{red}\Rbar.} Remember not my sins, O Lord: * When Thou wilt come to judge the world by fire.
+	
+	{\color{red}\Vbar.} Direct, O Lord my God, my way in Thy sight. * When Thou wilt come to judge the world by fire.
+	
+	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord, and let perptual light shine upon them. * When Thou wilt come to judge the world by fire.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{If only the Second Nocturn is said, then Lauds is immediately recited (pg. ). Otherwise, if Lauds is to be omitted, then continue with the Pater Noster and prayers beginning on pg. .}}
  
  \vfill\pagebreak
  
- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ 
+ \section*{Third Nocturn}
+ \begin{center}
+ \textit{To be said on Wednesdays and Saturdays.}
+ \end{center}
+ 
+\textit{May it please Thee, O Lord, to deliver me: Lord, have regard to help me.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_complaceat_tibi}
+ 
+\subsection*{Psalm 39}
+ 
+ \gresetinitiallines{1}
+ \gregorioscore{intonation_psalm_39}
+ 
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Et exaudívit preces \textbf{me}as:~* et edúxit me de lacu misériæ, et de lu\textit{to} \textbf{fæ}cis.
+
+	3. Et státuit super petram pedes \textbf{me}os:~* et diréxit gres\textit{sus} \textbf{me}os.
+	
+	4. Et immísit in os meum cánticum \textbf{no}vum~* carmen De\textit{o} \textbf{nos}tro.
+	
+	5. Vidébunt multi, et ti\textbf{mé}bunt:~* et sperábunt \textit{in} \textbf{Dó}mino.
+	
+	6. Beátus vir, cujus est nomen Dómini spes \textbf{e}jus~* et non respéxit in vanitátes et insáni\textit{as} \textbf{fal}sas.
+	
+	7. Multa fecísti tu, Dómine, Deus meus, mirabília \textbf{tu}a:~* et cogitatiónibus tuis non est qui símilis \textit{sit} \textbf{ti}bi.
+	
+	8. Annuntiávi et lo\textbf{cú}tus sum:~* multiplicáti sunt su\textit{per} \textbf{nú}merum.
+	
+	9. Sacrifícium et oblatiónem nolu\textbf{ís}ti:~* aures autem perfecís\textit{ti} \textbf{mi}hi.
+	
+	10. Holocáustum et pro peccáto non postu\textbf{lás}ti:~* tunc dixi: Ec\textit{ce} \textbf{vé}nio.
+	
+	11. In cápite libri scriptum est de me ut fácerem voluntátem \textbf{tu}am:~* Deus meus, vólui, et legem tuam in médio cor\textit{dis} \textbf{me}i.
+	
+	12. Annuntiávi justítiam tuam in ecclésia \textbf{ma}gna,~* ecce lábia mea non prohibébo: Dómine, \textit{tu} \textbf{scis}ti.
+	
+	13. Justítiam tuam non abscóndi in corde \textbf{me}o:~* veritátem tuam et salutáre tu\textit{um} \textbf{di}xi.
+	
+	14. Non abscóndi misericórdiam tuam et veritátem \textbf{tu}am~* a concíli\textit{o} \textbf{mul}to.
+	
+	15. Tu autem, Dómine, ne longe fácias miseratiónes tuas \textbf{a} me:~* misericórdia tua et véritas tua semper su\textit{sce}\textbf{pé}runt me.
+	
+	16. Quóniam circumdedérunt me mala, quorum non est \textbf{nú}merus:~* comprehendérunt me iniquitátes meæ, et non pótui ut \textit{vi}\textbf{dé}rem.
+	
+	17. Multiplicátæ sunt super capíllos cápitis \textbf{me}i:~* et cor meum de\textit{re}\textbf{lí}quit me.
+	
+	18. Compláceat tibi, Dómine, ut éru\textbf{as} me:~* Dómine, ad adjuvándum \textit{me} \textbf{ré}spice.
+	
+	19. Confundántur et revereántur simul, qui quærunt ánimam \textbf{me}am,~* ut áufe\textit{rant} \textbf{e}am.
+	
+	20. Convertántur retrórsum et revere\textbf{án}tur:~* qui volunt mi\textit{hi} \textbf{ma}la.
+	
+	21. Ferant conféstim confusiónem \textbf{su}am:~* qui dicunt mihi: Eu\textit{ge}, \textbf{eu}ge.
+	
+	22. Exsúltent et læténtur super te omnes quæ\textbf{rén}tes te:~* et dicant semper: Magnificétur Dóminus: qui díligunt salutá\textit{re} \textbf{tu}um.
+	
+	23. Ego autem mendícus sum, et \textbf{pau}per:~* Dóminus sollícitus \textit{est} \textbf{me}i.
+	
+	24. Adjútor meus et protéctor meus \textbf{tu} es:~* Deus meus, ne \textit{tar}\textbf{dá}veris.
+	
+	25. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lucea\textit{at} \textbf{e}is.
+ }{
+ 	1. With expectation I have waited for the Lord, and he was attentive to me.
+ 	
+ 	2. And he heard my prayers, and brought me out of the pit of misery and the mire of dregs.
+ 	
+ 	3. And he set my feet upon a rock, and directed my steps.
+ 	
+ 	4. And he put a new canticle into my mouth, a song to our God. 
+ 	
+ 	5. Many shall see, and shall fear: and they shall hope in the Lord.
+ 	
+ 	6. Blessed is the man whose trust is in the name of the Lord; and who hath not had regard to vanities, and lying follies.
+ 	
+ 	7. Thou hast multiplied thy wonderful works, O Lord my God: and in thy thoughts there is no one like to thee.
+ 	
+ 	8. I have declared and I have spoken they are multiplied above number.
+ 	
+ 	9. Sacrifice and oblation thou didst not desire; but thou hast pierced ears for me.
+ 	
+ 	10. Burnt offering and sin offering thou didst not require: Then said I, Behold I come.
+ 	
+ 	11. In the head of the book it is written of me that I should do thy will: O my God, I have desired it, and thy law in the midst of my heart.
+ 	
+ 	12. I have declared thy justice in a great church, lo, I will not restrain my lips: O Lord, thou knowest it.
+ 	
+ 	13. I have not hid thy justice within my heart: I have declared thy truth and thy salvation.
+ 	
+ 	14. I have not concealed thy mercy and thy truth from a great council.
+ 	
+ 	15. Withhold not thou, O Lord, thy tender mercies from me: thy mercy and thy truth have always upheld me.
+ 	
+ 	16. For evils without number have surrounded me; my iniquities have overtaken me, and I was not able to see.
+ 	
+ 	17. They are multiplied above the hairs of my head: and my heart hath forsaken me.
+ 	
+ 	18. Be pleased, O Lord, to deliver me, look down, O Lord, to help me.
+ 	
+ 	19. Let them be confounded and ashamed together, that seek after my soul to take it away.
+ 	
+ 	20. Let them be turned backward and be ashamed that desire evils to me.
+ 	
+ 	21. Let them immediately bear their confusion, that say to me: 'T is well, 't is well.
+ 	
+ 	22.  Let all that seek thee rejoice and be glad in thee: and let such as love thy salvation say always: The Lord be magnified.
+ 	
+ 	23. But I am a beggar and poor: the Lord is careful for me.
+ 	
+ 	24. Thou art my helper and my protector: O my God, be not slack.
+ 	
+ 	25. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+ 
+ \gresetinitiallines{1}
+ \gregorioscore{antiphon_complaceat_tibi}
+ \textit{May it please Thee, O Lord, to deliver me: Lord, have regard to help me.}
+ 
+ %%
+ 
+\hspace{2cm}
+ 
+\textit{Heal my soul, O Lord, for I have sinned against Thee.}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_sana_domine}
+ 
+\subsection*{Psalm 40}
+ 
+ \gresetinitiallines{1}
+ \gregorioscore{intonation_psalm_40}
+ 
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Dóminus consérvet eum, et vivíficet eum, et beátum fáciat eum in \textbf{ter}ra:~* et non tradat eum in ánimam inimicó\textit{rum} \textbf{e}jus.
+
+	3. Dóminus opem ferat illi super lectum dolóris \textbf{e}jus:~* univérsum stratum ejus versásti in infirmitá\textit{te} \textbf{e}jus.
+	
+	4. Ego dixi: Dómine, miserére \textbf{me}i:~* sana ánimam meam, quia peccá\textit{vi} \textbf{ti}bi.
+	
+	5. Inimíci mei dixérunt mala \textbf{mi}hi:~* Quando moriétur, et períbit no\textit{men} \textbf{e}jus?
+	
+	6. Et si ingrediebátur ut vidéret, vana loque\textbf{bá}tur:~* cor ejus congregávit iniquitá\textit{tem} \textbf{si}bi.
+	
+	7. Egrediebátur \textbf{fo}ras,~* et loquebátur in \textit{id}\textbf{íp}sum.
+	
+	8. Advérsum me susurrábant omnes inimíci \textbf{me}i:~* advérsum me cogitábant ma\textit{la} \textbf{mi}hi.
+	
+	9. Verbum iníquum constituérunt ad\textbf{vér}sum me:~* Numquid qui dormit non adjíciet ut \textit{re}\textbf{súr}gat?
+	
+	10. Etenim homo pacis meæ, in quo spe\textbf{rá}vi:~* qui edébat panes meos, magnificávit super me supplanta\textit{ti}\textbf{ó}nem.
+	
+	11. Tu autem, Dómine, miserére mei, et resúsci\textbf{ta} me:~* et retríbu\textit{am} \textbf{e}is.
+	
+	12. In hoc cognóvi quóniam volu\textbf{ís}ti me:~* quóniam non gaudébit inimícus me\textit{us} \textbf{su}per me.
+	
+	13. Me autem propter innocéntiam susce\textbf{pís}ti:~* et confirmásti me in conspéctu tuo in \textit{æ}\textbf{tér}num.
+	
+	14. Benedíctus Dóminus, Deus Israël, a sǽculo et usque in \textbf{sǽ}culum:~* fi\textit{at}, \textbf{fi}at.
+	
+	15. Requiem æternam dona eis, \textbf{Do}mine~* Et lux perpetua lucea\textit{at} \textbf{e}is.
+ }{
+ 	1. Blessed is he that understandeth concerning the needy and the poor: the Lord will deliver him in the evil day.
+ 	
+ 	2. The Lord preserve him and give him life, and make him blessed upon the earth: and deliver him not up to the will of his enemies.
+ 	
+ 	3. The Lord help him on his bed of sorrow: thou hast turned all his couch in his sickness.
+
+	4. I said: O Lord, be thou merciful to me: heal my soul, for I have sinned against thee.
+	
+	5. My enemies have spoken evils against me: when shall he die and his name perish?
+	
+	6. And if he came in to see me, he spoke vain things: his heart gathered together iniquity to itself.
+	
+	7. He went out, and spoke to the same purpose.
+	
+	8. All my enemies whispered together against me: they devised evils to me.
+	
+	9. They determined against me an unjust word: shall he that sleepeth rise again no more?
+	
+	10. For even the man of peace, in whom I trusted, who ate my bread, hath greatly supplanted me.
+	
+	11. But thou, O Lord, have mercy on me, and raise me up again: and I will requite them.
+	
+	12. By this I know, that thou hast had a good will for me: because my enemy shall not rejoice over me.
+	
+	13. But thou hast upheld me by reason of my innocence: and hast established me in thy sight for ever.
+	
+	14. Blessed by the Lord the God of Israel from eternity to eternity. So be it. So be it.
+ 	
+ 	15. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+ 
+\gresetinitiallines{1}
+\gregorioscore{antiphon_sana_domine}
+\textit{Heal my soul, O Lord, for I have sinned against Thee.}
+
+%%
+
+\hspace{2cm}
+
+\textit{My soul has thirsted after the living God: when shall I come and appear before the face of the Lord?}
+\gresetinitiallines{1}
+\gregorioscore{antiphon_sitivit_anima}
+ 
+\subsection*{Psalm 41}
+ 
+ \gresetinitiallines{1}
+ \gregorioscore{intonation_psalm_41}
+ 
+ \begin{latinenglishsection} 
+ \latinenglish{
+ 	2. Sitívit ánima mea ad Deum \textit{for}\textit{tem} \textbf{vi}vum:~* quando véniam, et apparébo ante \textit{fá}\textit{ci}\textit{em} \textbf{De}i?
+
+	3. Fuérunt mihi lácrimæ meæ panes di\textit{e} \textit{ac} \textbf{noc}te:~* dum dícitur mihi quotídie: Ubi \textit{est} \textit{De}\textit{us} \textbf{tu}us?
+	
+	4. Hæc recordátus sum, et effúdi in me á\textit{ni}\textit{mam} \textbf{me}am:~* quóniam transíbo in locum tabernáculi admirábilis, usque \textit{ad} \textit{do}\textit{mum} \textbf{De}i.
+	
+	5. In voce exsultatiónis, et con\textit{fes}\textit{si}\textbf{ó}nis:~* so\textit{nus} \textit{e}\textit{pu}\textbf{lán}tis.
+	
+	6. Quare tristis es, á\textit{ni}\textit{ma} \textbf{me}a?~* et \textit{qua}\textit{re} \textit{con}\textbf{túr}\textbf{bas} me?
+	
+	7. Spera in Deo, quóniam adhuc confi\textit{té}\textit{bor} \textbf{il}li:~* salutáre vultus mei, \textit{et} \textit{De}\textit{us} \textbf{me}us.
+	
+	8. Ad meípsum ánima mea \textit{con}\textit{tur}\textbf{bá}ta est:~* proptérea memor ero tui de terra Jordánis, et Hermóniim \textit{a} \textit{mon}\textit{te} \textbf{mó}\textbf{di}co.
+	
+	9. Abýssus a\textit{býs}\textit{sum} \textbf{ín}vocat,~* in voce catarac\textit{tá}\textit{rum} \textit{tu}\textbf{á}rum.
+	
+	10. Omnia excélsa tua, et \textit{fluc}\textit{tus} \textbf{tu}i~* super \textit{me} \textit{trans}\textit{i}\textbf{é}runt.
+	
+	11. In die mandávit Dóminus misericór\textit{di}\textit{am} \textbf{su}am:~* et nocte \textit{cán}\textit{ti}\textit{cum} \textbf{e}jus.
+	
+	12. Apud me orátio Deo \textit{vi}\textit{tæ} \textbf{me}æ,~* dicam Deo: \textit{Su}\textit{scép}\textit{tor} \textbf{me}\textbf{us} es.
+	
+	13. Quare oblí\textit{tus} \textit{es} \textbf{me}i?~* et quare contristátus incédo, dum afflígit \textit{me} \textit{in}\textit{i}\textbf{mí}cus?
+	
+	14. Dum confringúntur \textit{os}\textit{sa} \textbf{me}a,~* exprobravérunt mihi qui tríbulant me in\textit{i}\textit{mí}\textit{ci} \textbf{me}i.
+	
+	15. Dum dicunt mihi per síngulos dies: Ubi est \textit{De}\textit{us} \textbf{tu}us?~* quare tristis es, ánima mea? et \textit{qua}\textit{re} \textit{con}\textbf{túr}\textbf{bas} me?
+	
+	16. Spera in Deo, quóniam adhuc confi\textit{té}\textit{bor} \textbf{il}li:~* salutáre vultus mei, \textit{et} \textit{De}\textit{us} \textbf{me}us.
+	
+	17. Requiem æternam dona \textit{eis}, \textbf{Do}mine~* Et lux perpetua luc\textit{eat} \textbf{e}is.
+ }{
+ 	1. As the hart panteth after the fountains of water; so my soul panteth after thee, O God.
+ 	
+ 	2. My soul hath thirsted after the strong living God; when shall I come and appear before the face of God?
+ 	
+ 	3. My tears have been my bread day and night, whilst it is said to me daily: Where is thy God?
+ 	
+ 	4.  These things I remembered, and poured out my soul in me: for I shall go over into the place of the wonderful tabernacle, even to the house of God:
+ 	
+ 	5. With the voice of joy and praise; the noise of one feasting.
+ 	
+ 	6. Why art thou sad, O my soul? and why dost thou trouble me?
+ 	
+ 	7. Hope in God, for I will still give praise to him: the salvation of my countenance,
+ 	
+ 	8. And my God. My soul is troubled within myself: therefore will I remember thee from the land of Jordan and Hermoniim, from the little hill.
+ 	
+ 	9. Deep calleth on deep, at the noise of thy flood-gates. 
+ 	
+ 	10. All thy heights and thy billows have passed over me.
+ 	
+ 	11. In the daytime the Lord hath commanded his mercy; and a canticle to him in the night. 
+ 	
+ 	12. With me is prayer to the God of my life. I will say to God: Thou art my support.
+ 	
+ 	13. Why hast thou forgotten me? and why go I mourning, whilst my enemy afflicteth me?
+ 	
+ 	14.  Whilst my bones are broken, my enemies who trouble me have reproached me.
+ 	
+ 	15. Whilst they say to me day be day: Where is thy God? Why art thou cast down, O my soul? and why dost thou disquiet me?
+ 	
+ 	16. Hope thou in God, for I will still give praise to him: the salvation of my countenance, and my God.
+ 	
+ 	17. Eternal rest, grant unto them O Lord, and let perpetual light shine upon them.
+ } 
+\end{latinenglishsection}
+ 
+\gresetinitiallines{1}
+\gregorioscore{antiphon_sitivit_anima}
+\textit{My soul has thirsted after the living God: when shall I come and appear before the face of the Lord?}
+
+\begin{latinenglishsection}
+\latinenglish{
+	{\color{red}\Vbar.} Ne tradas b\'{e}stis \'{a}nimas confit\'{e}ntes tibi.
+	
+	{\color{red}\Rbar.} Et \'{a}nimas p\'{a}uperum tu\'{o}rum ne oblivisc\'{a}ris in finem.
+	
+	Pater noster, {\color{red}\textit{secreto...}}
+}{
+	{\color{red}\Vbar.} Deliver not to beasts the souls that confess Thee.
+	
+	{\color{red}\Rbar.} And the souls of Thy poor, forget not to the end.
+	
+	Our Father, {\color{red}\textit{the rest in silence...}}
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+ \subsection*{Seventh Lesson - Job 17:1-3; 11-15}
+ 
+ \begin{latinenglishsection}
+\latinenglish{
+	Spiritus meus attenu\'{a}bitur, dies mei breviab\'{u}ntur, et solum mihi s\'{u}perest sep\'{u}lchrum. Non pecc\'{a}vi, et in amaritudi\'{i}nibus mor\'{a}tur \'{o}culus meus. L\'{i}bera me, D\'{o}min, et pone me juxta te, cuj\'{u}svis manus pugnet contra me. Dies mei transi\'{e}runt, cogitati\'{o}nes me\ae dissip\'{a}te sunt, torqu\'{e}ntes cor meum. Noctem vert\'{e}runt in diem, et rursum post t\'{e}nebras spero lucem. Si sustin\'{i}ero, inf\'{e}rnus domus mea est, et in t\'{e}nebris stravi l\'{e}ctulum meum. Putr\'{e}dini dixi: Pater meus es; mater mea et soror mea, v\'{e}rmibus. Ubi est ergo nunc pr\ae stol\'{a}tio mea, et pati\'{e}ntiam meam quis cons\'{i}derat?
+	
+	{\color{red}\Rbar.} Pecc\'{a}ntem me quot\'{i}die, et non me p\oe nit\'{e}ntem, timor mortis cont\'{u}rbat me: * Quia in inf\'{e}rno nulla est red\'{e}mptio, miser\'{e}re mei, Deus, et salva me.
+	
+	{\color{red}\Vbar.} Deus, in n\'{o}mine tuo salvum me fac, et in virt\'{u}te tua l\'{i}bera me. * Quia in inf\'{e}rno nulla est r\'{e}demptio, miser\'{e}re mei, Deus, et salva me.
+}{
+	My spirit is wasted: my days are shortened, and only the grave remaineth for me. I have not sinned, and my eye abideth in bitterness. Deliver me, O Lord, and set me beside Thee, and let any man's hand fight against me. My days have passed away; my thoughts are broken off, tormenting my heart. They have turned night into day; and after darkness I hope for light again. If I wait, hell is my house; and I have made my bed in darkness. I have said to rottenness: Thou art my father; to worms: You are my mother and my sister. Where then is now my expectation, and who considereth my patience?
+	
+	{\color{red}\Rbar.} Forasmuch as I sin daily, and repent not, the fear of death troubles me: * Because in hell there is no redemption, have mercy on me, O God, and save me.
+	
+	{\color{red}\Vbar.} O God, in Thy name save me, and in Thy power deliver me. * Because in hell there is no redemption, have mercy on me, O God, and save me.
+}
+\end{latinenglishsection}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\vfill\pagebreak
 
 \begin{latinenglishsection}
 \latinenglish{
