Completed Matins along with several proper prayers for the dead, the remainder of which need to be added.

--- a/Matins/matins_of_the_dead.tex
+++ b/Matins/matins_of_the_dead.tex
@@ -1003,9 +1003,9 @@
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
- \subsection*{Seventh Lesson - Job 17:1-3; 11-15}
+\subsection*{Seventh Lesson - Job 17:1-3; 11-15}
  
- \begin{latinenglishsection}
+\begin{latinenglishsection}
 \latinenglish{
 	Spiritus meus attenu\'{a}bitur, dies mei breviab\'{u}ntur, et solum mihi s\'{u}perest sep\'{u}lchrum. Non pecc\'{a}vi, et in amaritudi\'{i}nibus mor\'{a}tur \'{o}culus meus. L\'{i}bera me, D\'{o}min, et pone me juxta te, cuj\'{u}svis manus pugnet contra me. Dies mei transi\'{e}runt, cogitati\'{o}nes me\ae dissip\'{a}te sunt, torqu\'{e}ntes cor meum. Noctem vert\'{e}runt in diem, et rursum post t\'{e}nebras spero lucem. Si sustin\'{i}ero, inf\'{e}rnus domus mea est, et in t\'{e}nebris stravi l\'{e}ctulum meum. Putr\'{e}dini dixi: Pater meus es; mater mea et soror mea, v\'{e}rmibus. Ubi est ergo nunc pr\ae stol\'{a}tio mea, et pati\'{e}ntiam meam quis cons\'{i}derat?
 	
@@ -1021,20 +1021,124 @@
 }
 \end{latinenglishsection}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection*{Eighth Lesson - Job 19:20-27}
+ 
+\begin{latinenglishsection}
+\latinenglish{
+	Pelli me\ae cons\'{u}mptis c\'{a}rnibus, adh\'{\ae}sit os meum, et derel\'{i}cta sunt tant\'{u}mmodo, l\'{a}bia circa dentes meos. Miser\'{e}mini mei, miser\'{e}mini mei, saltem vos, am\'{i}ci mei, qui manus D\'{o}mini t\'{e}tigit me. Quare persequi\'{i}mini me sicut Deus, et c\'{a}rnibus meis satur\'{a}min\'{i}? Quis mihi tr\'{i}buat ut scrib\'{a}ntur serm\'{o}nes mei? Quis mihi det ut exar\'{e}ntur in libro, stilo f\'{e}rreo et plumbi l\'{a}mina, vel celte sculp\'{a}ntur in s\'{i}lice? Scio enim quod red\'{e}mptor meus vivit, et in nov\'{i}ssimo die de terra surrect\'{u}rus sum: et rursum circ\'{u}mdabor pelle mea, et in carne mea vid\'{e}bo Deum meum. Quem vis\'{u}rus sum ego ipse, et \'{o}culi mei conspect\'{u}ri sunt, et non \'{a}lius: rep\'{o}sita est h\ae c spes mea in sinu meo.
+	
+	{\color{red}\Rbar.} D\'{o}mine, sec\'{u}ndum actum meum noli me judic\'{a}re: nihil dignum in consp\'{e}ctu tuo egi; ideo d\'{e}precor majest\'{a}tem tuam, * Ut tu, Deus, d\'{e}leas iniquit\'{a}tem meam.
+	
+	{\color{red}\Vbar.} Amplius lava me, D\'{o}mine, ab injust\'{i}tia mea, et a del\'{i}cto meo munda me. * Ut tu, Deus, d\'{e}leas inquit\'{a}tem meam.
+}{
+	The flesh being consumed, my bone cleaveth to my skin: and nothing but lips are left about my teeth. Have pity on me, have pity on me, at least ye my friends; because the hand of the Lord hath touched me. Why do ye persecute me as God, and glut yourselves with my flesh? Who will grant me that my words may by written? Who will grant me that they may be marked down in a book with an iron style and on a plate of lead, or else be graven with an instrument on the rock? For I know that my Redeemer liveth, and on the last day I shall rise out of the earth. And I shall be clothed again with my skin, and in my flesh I shall see my God. Whom I myself shall see, and my eyes shall behold, and not another: this, my hope, is laid up in my bosom.
+	
+	{\color{red}\Rbar.} Judge me not, O Lord, according to my deeds, for I have done nothing worthy in Thy sight; therefore I beseech Thy majesty, * that Thou, O God, mayst blot out my iniquity.
+	
+	{\color{red}\Vbar.} Wash me, O Lord, yet more from my injustice, and cleanse me from my sin. * That Thou, O God, mayst blot out my iniquity.
+}
+\end{latinenglishsection}
 
-\vfill\pagebreak
+\subsection*{Ninth Lesson - Job 10:18-22}
+ 
+\begin{latinenglishsection}
+\latinenglish{
+	Quare de vulva edux\'{i}sti me? qui \'{u}tinam cons\'{u}mptus essem ne \'{o}culus me vid\'{e}ret. Fu\'{i}ssem quasi non essem, de \'{u}tero transl\'{a}tus ad t\'{u}mulum. Numquid non p\'{a}ucitas di\'{e}rum me\'{o}rum fini\'{e}tur brevi? Dim\'{i}tte ergo me, ut plangam p\'{a}ululum dol\'{o}rem meum, \'{a}ntequam vadam, et non rev\'{e}rtar, terram mis\'{e}ri\ae et tenebr\'{a}rum, ubi umbra mortis et nullus ordo, sed sempit\'{e}rnus horror inh\'{a}bitat.
+}{
+	Why didst Thou bring me forth out of the womb? O that I had been consumed, that eye might not see me. I should have been as if I had not been carried from the womb to the grave. Shall not the fewness of my days be ended shortly? Suffer nme then that I may lament my sorrow a little; before I go and return no more, to a land that is dark and covered with the mist of death: a land of misery and darkness, where the shadow of death, and no order, but everlasting horror dwelleth.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{The following responsory is said when only the third Nocturn has been said, Otherwise, it is omitted and the next rubric should be consulted.}}
 
 \begin{latinenglishsection}
 \latinenglish{
-	{\color{red}\Rbar.} Líbera me, Dómine, de morte ætérna in die illa treménda, {\color{red}*} Quando cæli movéndi sunt et terra: {\color{red}*} Dum véneris judicáre s\'{\ae}culum per ignem.\\
-	{\color{red}\Vbar.} Tremens factus sum ego et tímeo, dum discússio vénerit atque ventúra ira. {\color{red}*} Quando cæli movéndi sunt et terra.\\
-	{\color{red}\Vbar.} Dies illa, dies iræ, calamitátis et misériæ, dies magna et amára valde. {\color{red}*} Dum véneris judicáre s\'{\ae}culum per ignem.
+	{\color{red}\Rbar.} Libera me, D\'{o}mine, de viis inf\'{e}rni, qui portas \ae reas confreg\'{i}sti, et visit\'{a}sti inf\'{e}rnum, et ded\'{i}sti eis lumen, ut vid\'{e}rent te * Qui erant in p\oe nis tenebr\'{a}rum.
+	
+	{\color{red}\Vbar.} Clam\'{a}ntes dic\'{e}ntes: Adven\'{i}sti, Red\'{e}mptor noster. * Qui erant in p\oe nis tenebr\'{a}rum.
+	
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine, et lux perp\'{e}tua l\'{u}ceat eis. * Qui erant in p\oe nis tenebr\'{a}rum.
 }{
-	{\color{red}\Rbar.} Deliver me, O Lord, from eternal death, in that dreadful day: {\color{red}*} When the heavens and earth are to be moved: * When Thou shalt come to jusge the world by fire.\\
-	{\color{red}\Vbar.} I tremble and do fear when the examination is to be, and Thy wrath to come. {\color{red}*} When the heavens and earth are to be moved:\\
-	{\color{red}\Vbar.} That day is the day of anger, of calamity, and of misery, a great day and very bitter. {\color{red}*} When Thou shalt come to judge the world by fire.
+	{\color{red}\Rbar.} Deliver me, O Lord, from the ways of hell, Thou who hast broken the brazen gates, and hast visited hell, and hast given light to them, that they may behold Thee. * Who were in the pains of darkness.
+	
+	{\color{red}\Vbar.} Crying, and saying: Thou art come, O our Redeemer. * Who were in the pains of darkness.
+	
+	{\color{red}\Rbar.} Eternal rest grant unto them, O Lord, and let perpetual light shine upon them. * Who were in the pains of darkness.
 }
 \end{latinenglishsection}
+
+{\color{red}\textit{The following Responsory takes the place of the preceding one when the three Nocturns have been said.}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	{\color{red}\Rbar.} L\'{i}bera me, D\'{o}mine, de morte \ae t\'{e}rna in die illa trem\'{e}nda, * Quando c\ae li mov\'{e}ndi sunt et terra: * Dum v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+	
+	{\color{red}\Vbar.} Tremens factus sum ego et t\'{i}meo, dum disc\'{u}ssio v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+	
+	{\color{red}\Vbar.} Dies illa, dies ir\ae, calamit\'{a}tis et mis\'{e}ri\ae, dies magna et am\'{a}ra valde. * Dum disc\'{u}ssio v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+	
+	{\color{red}\Vbar.} R\'{e}quiem \ae t\'{e}rnam dona eis, D\'{o}mine: et lux perp\'{e}tua l\'{u}ceat eis. L\'{i}bera me, D\'{o}mine, de morte \ae t\'{e}rna in die illa trem\'{e}nda. * Quando c\ae li mov\'{e}ndi sunt et terra. * Dum v\'{e}neris judic\'{a}re s\'{\ae}culum per ignem.
+}{
+	{\color{red}\Rbar.} Deliver me, O Lord, from the eternal death, in that dreadful day: * When the heavens and earth are to be moved: * When THou shalt come to judge the world by fire.
+	
+	{\color{red}\Vbar.} I tremble and do fear when the examination is to be, and Thy wrath to come. * When the heavens and earth are to be moved:
+	
+	{\color{red}\Vbar.} That day is the day of anger, of calamity, and of misery, a great day and very bitter. * When Thou shalt come to judge the world by fire.
+	
+	{\color{red}\Vbar.} Eternal rest grant unto them, O Lord, and let perpetual light shine upon them. Deliver me, O Lord, from eternal death, in that dreadful day, * When the heavens and earth are to be moved. * When Thou shalt come to judge the world by fire.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{Here Lauds follows immediately. Or if Lauds are omitted, after the last Responsory the Pater Noster and the relevant prayer(s) on the following page is/are said.}}
+
+\vfill\pagebreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section*{Proper Collects for the Dead}
+
+\subsection*{\color{red}Prayer on the Day of the Decease and Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Absolve, qu\'{\ae}sumus, D\'{o}mine, \'{a}nimam f\'{a}muli tui (f\'{a}mul\ae tu\ae) {\color{red}N.}, ut def\'{u}nctus (def\'{u}ncta) s\'{\ae}culo tibi vivat: et, qu\ae per fragilit\'{a}tem carnis hum\'{a}na\\ conversati\'{o}ne comm\'{i}sit, tu v\'{e}nia misericord\'{i}ssim\ae piet\'{a}tis abst\'{e}rge. Per D\'{o}minum nostrum Jesum Christum F\'{i}lium tuum, qui tecum vivit et regnat in unit\'{a}te Sp\'{i}ritus Sancti, Deus, per \'{o}mnia s\'{\ae}cula s\ae cul\'{o}rum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Absolve, we beseech Thee, O lord, the soul of Thy servant {\color{red}N.}, that being dead to the world he (or she) may live to Thee; and whatever he (or she) has committed through human frailty, do Thou wipe away by the pardon of Thy most merciful goodness. Through Our Lord Jesus Christ, Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+{\color{red}\textit{The following prayer may also be used:}}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Deus, cui pr\'{o}prium est miser\'{e}ri semper et p\'{a}rcere, te s\'{u}pplices exor\'{a}mus pro \'{a}nima f\'{a}muli tui {\color{red}N.} (f\'{a}mul\ae tu\ae {\color{red}N.}), quam h\'{o}die de hoc s\'{\ae}culo migr\'{a}re juss\'{i}sti: ut non tradas eam in manus inim\'{i}mici, neque oblivisc\'{a}ris in finem, sed j\'{u}beas eam a sanctis Angelis s\'{u}scipi, et ad p\'{a}triam parad\'{i}si perd\'{u}ci; ut, quia in te sper\'{a}vit et cr\'{e}diditm non p\oe nas inf\'{e}rni sust\'{i}neatm sed g\'{a}udia \ae t\'{e}rna poss\'{i}deat. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	O God, whose property it is always to have mercy and to spare, we humbly beseech Thee for the soul of Thy servant {\color{red}N.}, which today Thou hast taken out of this world: not to deliver it into the hands of the enemy, nor to forget it forever;but to command the holy angels to receive it, and to conduct it to the heavenly country; that since it has believed and hoped in Thee, it may not suffer the pains of hell, but possess eternal joys. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\subsection*{\color{red}Prayer for the Third, Seventh, or Thirtieth Day after Burial}
+
+\begin{latinenglishsection}
+\latinenglish{
+	Qu\ae sumus, D\'{o}mine, ut \'{a}nimam f\'{a}muli tui {\color{red}N.},\\ (f\'{a}mul\ae tu\ae {\color{red}N.}), cujus depositi\'{o}nis diem t\'{e}rtium ({\color{red}vel} s\'{e}ptimum, {\color{red}vel} trig\'{e}simum) commemor\'{a}mus, sanct\'{o}rum atque elect'{o}rum tu\'{o}rum larg\'{i}ri dign\'{e}ris cons\'{o}rtium: et rorem miseric\'{o}rdi\ae tu\ae per\'{e}nnem inf\'{u}ndas. Per Dóminum nostrum Iesum Christum Fílium tuum, qui tecum vivit et regnat in unitáte Spíritus Sancti, Deus, per ómnia s\'{\ae}cula sæculórum.
+	
+	{\color{red}\Rbar.} Amen.
+}{
+	Vouchsafe, we beseech Thee, O Lord, to admit the soul of Thy servant {\color{red}N.}, the third (seventh or thirtieth) day of whose burial we commemorate, into the fellowship of Thy saints and elect, and sprinkle upon it the perpetual dew of Thy mercy. Through Our Lord Jesus Christ Thy Son, who liveth and reigneth with Thee in the unity of the Holy Ghost, God, world without end.
+	
+	{\color{red}\Rbar.} Amen.
+}
+\end{latinenglishsection}
+
+\vfill\pagebreak
 
 \end{document}
